# tagurit

Release/: PUT_DLLS_HERE.txt  offsets.json.example
TagUrIt/: CMakeLists.txt  README.txt  main.cpp
